fix: use exact regex matching in fuzz workflow
- Change -fuzz flag to use '^pattern$' for exact matching
- Prevents substring matching issues (FuzzParseFunc matched FuzzParseFuncWithName)
- Each matrix job now runs exactly one fuzz test
- Fixes workflow failure: 'will not fuzz, -fuzz matches more than one fuzz test'

--- a/.github/workflows/tagparser-fuzz.yml
+++ b/.github/workflows/tagparser-fuzz.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Run fuzz test - ${{ matrix.fuzz-test }}
         working-directory: ${{ env.MODULE }}
-        run: go test -fuzz=${{ matrix.fuzz-test }} -fuzztime=${{ steps.fuzztime.outputs.time }}
+        run: go test -fuzz='^${{ matrix.fuzz-test }}$' -fuzztime=${{ steps.fuzztime.outputs.time }}
 
       - name: Upload crash artifacts
         if: failure()
