Upload test coverage file to codecov

--- a/.github/workflows/tagparser-ci.yml
+++ b/.github/workflows/tagparser-ci.yml
@@ -2,6 +2,7 @@ name: "Tagparser CI"
 run-name: "Tagparser CI on ${{ github.ref_name }}"
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - "feat**"
@@ -13,65 +14,60 @@ on:
       - "**.go"
       - "go.mod"
       - "go.sum"
+      - ".github/workflows/**"
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
-    branches:
-      - main
+    types: [opened, synchronize, reopened]
+    branches: [main]
     paths:
       - "**.go"
       - "go.mod"
       - "go.sum"
+      - ".github/workflows/**"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
-  GO_VERSION: "1.25.0"
+  GO_VERSION: "1.25"
   LINTER_VERSION: "2.6.2"
-  MODULE: "."
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-      - name: Install Go
-        uses: actions/setup-go@v4
+        uses: actions/checkout@v6
+
+      - name: Setup Go
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: Clean cache
-        working-directory: ${{ env.MODULE }}
-        run: go clean -modcache && go clean -testcache && go mod tidy
-      - name: Install dependencies
-        working-directory: ${{ env.MODULE }}
-        run: go mod download
+          cache: true
+
       - name: Run tests
-        working-directory: ${{ env.MODULE }}
-        run: go test -v -race -failfast -coverpkg=./... -covermode=atomic -coverprofile=coverage.tmp.out ./...
-      - name: Exclude testdata
-        working-directory: ${{ env.MODULE }}
-        run: cat coverage.tmp.out | grep -v "testdata" > coverage.out
-      - name: Clean temp coverage
-        working-directory: ${{ env.MODULE }}
-        run: rm coverage.tmp.out
+        run: go test -v -race -failfast -coverpkg=./... -covermode=atomic -coverprofile=coverage.out ./...
+
+      - name: Upload coverage
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.out
+          fail_ci_if_error: true
 
   lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-      - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/checkout@v6
+
+      - name: Setup Go
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: Install lint
-        working-directory: ${{ env.MODULE }}
-        run: go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v${{ env.LINTER_VERSION }}
-      - name: Run lint
-        working-directory: ${{ env.MODULE }}
-        run: golangci-lint run
+          cache: true
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v9
+        with:
+          version: v${{ env.LINTER_VERSION }}
