Attempt to stabilize coverage generation over time

--- a/.github/workflows/tagparser-ci.yml
+++ b/.github/workflows/tagparser-ci.yml
@@ -38,6 +38,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 
       - name: Setup Go
         uses: actions/setup-go@v6
@@ -51,8 +53,8 @@ jobs:
       - name: Upload coverage
         uses: codecov/codecov-action@v5
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage.out
+          flags: unit
           fail_ci_if_error: true
 
   lint:
