--- a/.github/workflows/tagparser-ci.yml
+++ b/.github/workflows/tagparser-ci.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Upload coverage
         uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage.out
           flags: unit
           fail_ci_if_error: true
