Added verbose flag to Codecov uploads

--- a/.github/workflows/tagparser-ci.yml
+++ b/.github/workflows/tagparser-ci.yml
@@ -57,6 +57,7 @@ jobs:
           files: coverage.out
           flags: unit
           fail_ci_if_error: true
+          verbose: true
 
   lint:
     runs-on: ubuntu-latest
